--- a/index.html
+++ b/index.html
@@ -1,65 +1,32 @@
 <!doctype html>
-<html lang="en-US">
-<head>
+<html>
+  <head>
     <meta charset="utf-8">
     <title>SEOUL CALIBER LLC</title>
     <meta name="description" content="Welcome to Seoul Caliber LLC">
     <meta name="author" content="b">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-    <style>
-        .container {
-            display: flex;
-            align-items: center; 
-        }
-        .container img {
-            margin-right: 10px; 
-        }
-        .collapsible {
-            background-color: #777;
-            color: black;
-            cursor: pointer;
-            padding: 18px;
-            width: 100%;
-            border: none;
-            text-align: left;
-            outline: none;
-            font-size: 15px;
-        }
-        .active, .collapsible:hover {
-            background-color: #555;
-        }
-        .content {
-            padding: 0 18px;
-            display: none;
-            overflow: hidden;
-            background-color: #262626;
-        }
-        footer {
-            text-align: center;
-            padding: 3px;
-            background-color: darkgray;
-            color: black;
-        }
-    </style>
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>    
+      </head>
+  
+  <body>
+      <header id="header">
+      <img src="logo.jpg">
+      <h1>SEOUL CALIBER LLC</h1>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-</head>
 
-<body>
-    <div class="container">
-        <header id="header">
-            <img src="headersmaller.png" alt="Logo" class="logo">
+
             <ul class="main-menu">
                 <li><a href="#home">home</a></li>
             </ul>                 
         </header>
-    </div>
+    
 
     <div id="container">
         <div class="inner">
@@ -68,9 +35,6 @@
                     <h2>Home</h2>
                     <p>We are Seoul Caliber LLC, your #1 Sporting and Recreational Goods Retailer specializing in firearms and all shooting-related activities in Aurora, Colorado. <br> Website in progress.</p>
                 </div>
-
-
-
 
 
 
@@ -87,22 +51,9 @@
         <p><b>seoulcaliber.com</b> © 2024 All rights reserved.</p>
     </footer>
 
-    <script>
-        var coll = document.getElementsByClassName("collapsible");
-        for (var i = 0; i < coll.length; i++) {
-            coll[i].addEventListener("click", function() {
-                this.classList.toggle("active");
-                var content = this.nextElementSibling;
-                content.style.display = (content.style.display === "block") ? "none" : "block";
-            });
-        }
-    </script>
 
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-        }
+
     </script>
 </body>
 </html>
