--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <body>
       <header id="header">
-      <img src="logo.jpg">
+      <img src="logo.png">
       <h1>SEOUL CALIBER LLC</h1>
 
 
