--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ div.desc {
       <ul class="main-menu">
         <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
+	 <li><a href="#shop">shop</a></li>     
         <li><a href="#services">services</a></li>
          <li><a href="#policies">policies</a></li>
 	         <li><a href="#faq">faq</a></li>
