--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ div.desc {
 
 
 	<h2>Firearms</h2>
-<div id="shop" class="responsive">
+<div id="shop" class="content-region hide">
   <div class="gallery">
     <a target="_blank" href="img_5terre.jpg">
       <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
