--- a/index.html
+++ b/index.html
@@ -193,8 +193,10 @@ div.desc {
           </div>
 
 
-	<h2>Firearms</h2>
+
 <div id="shop" class="content-region hide">
+	<h2>Firearms</h2>	
+<div class="responsive">	
   <div class="gallery">
     <a target="_blank" href="img_5terre.jpg">
       <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
@@ -384,7 +386,7 @@ div.desc {
   </div>
 </div>
 
-
+</div>
 
 
 
