--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@ div.desc {
 	<h2>Firearms</h2>	
 <div class="responsive">	
   <div class="gallery">
-    <a target="_blank" href="img_5terre.jpg">
-      <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+    <a target="_blank" href="g17.jpg">
+      <img src="g17.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
     <div class="desc">GLOCK G17 Gen 3 Semi-Auto Pistol, 17+1, $499.00</div>
   </div>
