--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+    <a target="_blank" href="Sigp365manual.jpg">
+      <img src="Sigp365manual.jpg" alt="sigmanual" width="600" height="400">
     </a>
     <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
   </div>
@@ -217,8 +217,8 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href="sig-w365xca-9-bxr3-rx.jpg">
+      <img src="sig-w365xca-9-bxr3-rx.jpg" alt="sigx" width="600" height="400">
     </a>
     <div class="desc">Sig P365 Macro 9mm 3.7" X-Ray standard 3 17rd $579.00</div>
   </div>
@@ -226,8 +226,8 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="365-9-bxr3p-ms-web-1.jpg">
+      <img src="365-9-bxr3p-ms-web-1.jpg" alt="sig365" width="600" height="400">
     </a>
     <div class="desc">Sig P365 OPTIC READY Manual Safety Commercial 499.99</div>
   </div>
@@ -235,8 +235,8 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="365-9-bxr3p-web-1.jpg">
+      <img src="365-9-bxr3p-web-1.jpg" alt="sig" width="600" height="400">
     </a>
     <div class="desc">Sig Sauer P365 9mm Micro Compact 3.1" Commercial $499.99</div>
   </div>
@@ -244,8 +244,8 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="master1_101541312_alt1.jpg">
+      <img src="master1_101541312_alt1.jpg" alt="19x" width="600" height="400">
     </a>
     <div class="desc">Glock 19X MOS 9mm Coyote Pistol Commercial 17+2 rd $699.99</div>
   </div>
@@ -385,7 +385,7 @@ div.desc {
     <div class="desc">FN 510 TACTICAL 10 MM NMS 1-15RD 1-22 RD MAG NS FDE $1,139.00</div>
   </div>
 </div>
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 </div>
 
 
