--- a/index.html
+++ b/index.html
@@ -22,55 +22,25 @@
             margin-right: 10px; 
         }
     </style>
-
 <style>
-div.gallery {
-  border: 1px solid #ccc;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
-
 * {
   box-sizing: border-box;
 }
 
-.responsive {
-  padding: 0 6px;
+.column {
   float: left;
-  width: 24.99999%;
+  width: 25%;
+  padding: 5px;
 }
 
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
-}
-
-.clearfix:after {
+/* Clearfix (clear floats) */
+.row::after {
   content: "";
-  display: table;
   clear: both;
+  display: table;
 }
 </style>
+
     
     <!-- Stylesheets , user-scalable=no -->
     <!-- Reset default styles and add support for google fonts -->
@@ -164,18 +134,7 @@ div.desc {
 <ul><b>HB24-1174:</b> Starting 07/01/2025, the requirements for obtaining a concealed carry permit will change mandating mandates that training classes to qualify for a concealed carry permit offer at least eight hours of instruction, including a live-fire test where participants shoot at least 50 rounds. Passing the live-fire test, as well as a written exam, will also be mandatory to get a concealed carry permit. See https://leg.colorado.gov/bills/hb24-1174 for additional details. 
 </ul>
 		    
-<!-- 
-		    <div class="row">
-<div class="column">
-    <img src="nra.jpg" alt="nra" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="co.jpg" alt="co" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="nssf.jpg" alt="nsff" style="width:100%">
-  </div>
-		    -->
+
 
 
             </p>
@@ -197,188 +156,40 @@ div.desc {
 <div id="shop" class="content-region hide">
 	<h2>Firearms</h2>	
 
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="Sigp365manual.jpg">
-      <img src="Sigp365manual.jpg" alt="sigmanual" width="600" height="400">
-    </a>
+<div class="row">
+  <div class="column">
+      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
     <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
   </div>
 </div>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="sig-w365xca-9-bxr3-rx.jpg">
-      <img src="sig-w365xca-9-bxr3-rx.jpg" alt="sigx" width="600" height="400">
-    </a>
-    <div class="desc">Sig P365 Macro 9mm 3.7" X-Ray standard 3 17rd $579.00</div>
+<div class="row">
+  <div class="column">
+      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
+    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
   </div>
 </div>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="365-9-bxr3p-ms-web-1.jpg">
-      <img src="365-9-bxr3p-ms-web-1.jpg" alt="sig365" width="600" height="400">
-    </a>
-    <div class="desc">Sig P365 OPTIC READY Manual Safety Commercial $499.99</div>
+<div class="row">
+  <div class="column">
+      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
+    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
   </div>
 </div>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="365-9-bxr3p-web-1.jpg">
-      <img src="365-9-bxr3p-web-1.jpg" alt="sig" width="600" height="400">
-    </a>
-    <div class="desc">Sig Sauer P365 9mm Micro Compact 3.1" Commercial $499.99</div>
+<div class="row">
+  <div class="column">
+      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
+    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
   </div>
 </div>
 
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="11808_l.jpg">
-      <img src="11808_l.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">Smith & Wesson M&P9 Shield M2.0 9mm 3.1" Black - America's Guardians Program $430.00</div>
+<div class="row">
+  <div class="column">
+      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
+    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
   </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="glock_30_gen_4_.45_2_mags_for_public_sale.jpg">
-      <img src="glock_30_gen_4_.45_2_mags_for_public_sale.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">Glock 30 Gen 4 .45 2 Mags COMMERCIAL $546.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="glock-pg2050203.jpg">
-      <img src="glock-pg2050203.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">Glock 20 Gen 4 10mm 2 Mags COMMERCIAL $579.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="sw-209301_lg_3.jpg">
-      <img src="sw-209301_lg_3.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">Smith & Wesson M&P9 9mm Pistol Black 4.25" Bbl. $439.95</div>
-  </div>
-</div>
-
-	<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="master1_101541312_alt1.jpg">
-      <img src="master1_101541312_alt1.jpg" alt="19x" width="600" height="400">
-    </a>
-    <div class="desc">Glock 19X MOS 9mm Coyote Pistol Commercial 17+2 rd $699.99</div>
-  </div>
-</div>
-	
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">BERETTA APX A1 RDO 9MM 4.25" FS 17-SHOT BLACK POLYMER $499.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">BERETTA 92GTS FULL SIZE 9MM 4.7" 18RND BLACK $899.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">BERETTA M9 9MM CA COMPLIANT FS 10-SHOT BLACK MATTE POLY $799.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">BERETTA 92FS 9MM 4.9" FS 3-DOT 15-SHOT INOX BLACK RUBBER USA $929.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">FN 509 COMPACT 9MM LUGER 1-12RD 1-15RD BLACK $745.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">FN 509 FULL SIZE MRD 9MM NO SAFETY 2-17RD FDE $834.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">FN 510 MRD 10 MM NMS 2-15RD MAG BLACK $545.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">FN 509® MRD-LE Compensated NMS 9mm 17rd Pistol $814.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">FN 509 FULL SIZE MRD 9MM NMS W/ HOLOSUN 407C 2-17RD FDE​ $979.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">FN 509 T 9MM LUGER NIGHT SIGHT 1-17RD 4-24RD BRONZE/BRONZE $1,104.00</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">FN 510 TACTICAL 10 MM NMS 1-15RD 1-22 RD MAG NS FDE $1,139.00</div>
-  </div>
-</div>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 </div>
 
 
