--- a/index.html
+++ b/index.html
@@ -23,22 +23,10 @@
         }
     </style>
 <style>
-* {
-  box-sizing: border-box;
-}
-
-.column {
+img {
   float: left;
-  width: 25%;
-  padding: 5px;
 }
 
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
 </style>
 
     
@@ -156,33 +144,13 @@
 <div id="shop" class="content-region hide">
 	<h2>Firearms</h2>	
 
-<div class="row">
-  <div class="column">
-      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
-    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
+<p>
+	<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
+<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
+	<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
+	<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
 
-<div class="row">
-  <div class="column">
-      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
-    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
-
-<div class="row">
-  <div class="column">
-      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
-    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
-
-<div class="row">
-  <div class="column">
-      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
-    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
-
-
-<div class="row">
-  <div class="column">
-      <img src="Sigp365manual.jpg" alt="sigmanual" style="width:100%">
-    <div class="desc">Sig P365 9mm 3.7" X-Series X-Ray 3 w/NS Plate w/Manual Safety $540.00</div>
-  </div>
-</div>
+</p>
 
 
 
