--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@ img {
 	<h2>Firearms</h2>	
 
 <p>
-	<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
-<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
-	<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
-	<img src="Sigp365manual.jpg" alt="Placeholder Image 1"> Image 1<br>
+	<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="600" height="400"> Image 1<br>
+<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="600" height="400"> Image 1<br>
+	<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="600" height="400"> Image 1<br>
+	<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="600" height="400"> Image 1<br>
 
 </p>
 
