--- a/index.html
+++ b/index.html
@@ -143,13 +143,14 @@ img {
 
 <div id="shop" class="content-region hide">
 	<h2>Firearms</h2>	
+<div class="card">
+  <img src="Sigp365manual.jpg" alt="sig365manual" style="width:100%">
+  <h1>Sig Sauer Manual</h1>
+  <p class="price">$500.00</p>
+  <p>Add Description</p>
+  <p><button>Add to Cart</button></p>
+</div>
 
-<p>
-	<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="300" height="300"> Image 1<br>
-<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="300" height="300"> Image 1<br>
-	<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="300" height="300"> Image 1<br>
-	<img src="Sigp365manual.jpg" alt="Placeholder Image 1 width="300" height="300"> Image 1<br>
-</p>
 
 
 
