--- a/index.html
+++ b/index.html
@@ -142,18 +142,34 @@ img {
 
 
 <div id="shop" class="content-region hide">
-	<h2>Firearms</h2>	
+	<h2>Firearms(In Stock)</h2>	
 <div class="card">
-  <img src="Sigp365manual.jpg" alt="sig365manual" style="width:100%">
-  <h1>Sig Sauer Manual</h1>
-  <p class="price">$500.00</p>
-  <p>Add Description</p>
+  <img src="glock_30_gen_4_.45_2_mags_for_public_sale.jpg" alt="glock30g4" style="width:100%">
+  <h1>Glock 30 Gen 4 .45 2 Mags COMMERCIAL</h1>
+  <p class="price">$546.00</p>
+  <p><button>Add to Cart</button></p>
+</div>
+	
+<div class="card">
+  <img src="glock-pg2050203.jpg" alt="glockg20" style="width:100%">
+  <h1>Glock 20 Gen 4 10mm 2 Mags COMMERCIAL</h1>
+  <p class="price">$579.00</p>
+  <p><button>Add to Cart</button></p>
+</div>
+	
+<div class="card">
+  <img src="sw-209301_lg_3.jpg" alt="swmp9" style="width:100%">
+  <h1>Smith & Wesson M&P9 9mm Pistol Black 4.25" Bbl.</h1>
+  <p class="price">$439.95</p>
   <p><button>Add to Cart</button></p>
 </div>
 
-
-
-
+<div class="card">
+  <img src="master1_101541312_alt1.jpg" alt="glock19x" style="width:100%">
+  <h1>Glock 19X MOS 9mm Coyote Pistol Commercial 17+2 rd</h1>
+  <p class="price">$699.99</p>
+  <p><button>Add to Cart</button></p>
+</div>
 		
 		<div id="policies" class="content-region hide">
             <h2>Policies</h2>
