--- a/index.html
+++ b/index.html
@@ -170,6 +170,28 @@ img {
   <p class="price">$699.99</p>
   <p><button>Add to Cart</button></p>
 </div>
+
+<div class="card">
+  <img src="365-9-bxr3p-web-1.jpg" alt="sigp365optic" style="width:100%">
+  <h1>Sig P365 OPTIC READY Manual Safety Commercial</h1>
+  <p class="price">$499.99</p>
+  <p><button>Add to Cart</button></p>
+</div>
+
+<div class="card">
+  <img src="fn509.png" alt="fn509" style="width:100%">
+  <h1>FN 509® MRD-LE Compensated NMS 9mm 17rd Pistol</h1>
+  <p class="price">$814.00</p>
+  <p><button>Add to Cart</button></p>
+</div>
+
+<div class="card">
+  <img src="13927-sw-bodyguard2_nts-onwhite-left__87921.jpg" alt="bodyguard" style="width:100%">
+  <h1>Smith & Wesson BODYGUARD 2.0 Series .380</h1>
+  <p class="price">$399.99</p>
+  <p><button>Add to Cart</button></p>
+</div>
+
 		
 		<div id="policies" class="content-region hide">
             <h2>Policies</h2>
