--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ img {
   <p><button>Add to Cart</button></p>
 </div>
 
-		
+</div>		
 		<div id="policies" class="content-region hide">
             <h2>Policies</h2>
               <p><b>Currently in progress</b></p>
