--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@ img {
 
 
 <div id="shop" class="content-region hide">
-	<h2>Firearms (In Stock)</h2>	
+	<h2>Firearms (In Stock)</h2>
+	<p><b>NOTE:</b>All firearms, magazines, receivers and restricted law enforcement items are sold and shipped in accordance with all existing federal, state and local laws and regulations. Many of the firearms, magazines and parts for sale on this website in  may be restricted or prohibited in your area. For example, per CRS 18-12-302, firearms with magazine capacity exceeding fifteen (15) rounds will not be sold locally in the state of Colorado. Please check your local and state regulations before ordering. For additional questions, please email info@seoulcaliber.com.
+	</p>
 <div class="card">
   <img src="glock_30_gen_4_.45_2_mags_for_public_sale.jpg" alt="glock30g4" style="width:100%">
   <h1>Glock 30 Gen 4 .45 2 Mags COMMERCIAL</h1>
