--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@ img {
             <p>We are Seoul Caliber LLC. Your #1 Sporting and Recreational Goods Retailer and Merchant Wholesale Distributor specializing in Firearms and all shooting related activites.. We provide local services and products to Law Enforcement, Security, Military, Veterans, and our local community. <br> Out of state and looking for the best deal online?? We ship!! <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>  
 		    
-		    
-		    <b>February 2025: Website is currently in progress. Check back soon for updates!</b>
+
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 
-<p style="color:red;"><b><u>IMPORTANT UPDATES</u></b></p>
+<p style="color:red;"><b><u>IMPORTANT UPDATES: As of MARCH 2025 - we are making some major changes! Please expect website downtime and delay in responses. For quicket response - email us info@seoulaliber.com and we will try to get back to you as soon as possible. We apologize for the inconvenience :( . </u></b></p>
 <ul><b>SB23-169:</b> Effective 08/07/2023, Previous law allowed a person 18 tyears of age or older possess or purchase a firearm (shotgun or longun). This law increased age to legally purchase a firearm to 21 years of age or older. Exceptions included active members of US armed forces or peace office/ certified P.O.S.T. board. See https://leg.colorado.gov/bills/sb23-169 for additional details.
 </ul>
 <ul><b>HB24-1348:</b> Starting 01/01/2025, Secure firearm storage in vehicle. Handguns in an unattended vehicle must be stored in a locked hard-sided container that is placed out of plain view and the container is in a locked vehicle. See https://leg.colorado.gov/bills/hb24-1348 for additional details.
@@ -475,8 +474,8 @@ for (i = 0; i < coll.length; i++) {
 <footer>
 	<p><b><u>Contact Us</u></b> <br>
    11590 E 2nd Ave, Aurora, CO 80010 <br>
-	  Mon-Sat 8AM-8PM <br>
- Text or Call: (720) 515-4314<br>
+	  We are currently running by Appointment only. <br>
+ Call or Text: (720) 515-4314<br>
      Email: info@seoulcaliber.com
   </p>
 </footer>
