--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ img {
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 
-<p style="color:red;"><b><u>IMPORTANT UPDATES: As of MARCH 2025 - we are making some major changes! Please expect website downtime and delay in responses. For quicket response - email us info@seoulaliber.com and we will try to get back to you as soon as possible. We apologize for the inconvenience :( . </u></b></p>
+<p style="color:red;"><b><u>NOTE: We will be closed April 1st 2025 - April 2nd, 2025. We are also making some major changes! Please expect website downtime and delay in responses. For quicket response - email us info@seoulaliber.com and we will try to get back to you as soon as possible. We apologize for the inconvenience :( . </u></b></p>
 <ul><b>SB23-169:</b> Effective 08/07/2023, Previous law allowed a person 18 tyears of age or older possess or purchase a firearm (shotgun or longun). This law increased age to legally purchase a firearm to 21 years of age or older. Exceptions included active members of US armed forces or peace office/ certified P.O.S.T. board. See https://leg.colorado.gov/bills/sb23-169 for additional details.
 </ul>
 <ul><b>HB24-1348:</b> Starting 01/01/2025, Secure firearm storage in vehicle. Handguns in an unattended vehicle must be stored in a locked hard-sided container that is placed out of plain view and the container is in a locked vehicle. See https://leg.colorado.gov/bills/hb24-1348 for additional details.
